force-app/main/default/objects/Associated_Contact__c/fields/Transition_Status__c.field-meta.xml
<CustomField>
    <fullName>Transition_Status__c</fullName>
    <formula>TEXT( Transition__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transition Status</label>
    <type>Text</type>
</CustomField>