force-app/main/default/objects/Associated_Contact__c/fields/Transition_Type__c.field-meta.xml
<CustomField>
    <fullName>Transition_Type__c</fullName>
    <formula>TEXT(Transition__r.Transition_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transition Type</label>
    <type>Text</type>
</CustomField>