force-app/main/default/objects/Associated_Contact__c/fields/Ubiquity_Plan_Documents_Signed__c.field-meta.xml
<CustomField>
    <fullName>Ubiquity_Plan_Documents_Signed__c</fullName>
    <formula>Implementation__r.Ubiquity_Plan_Documents_Signed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ubiquity Plan Documents Signed</label>
    <type>Date</type>
</CustomField>