force-app/main/default/objects/Associated_Contact__c/fields/Useable_Email__c.field-meta.xml
<CustomField>
    <fullName>Useable_Email__c</fullName>
    <label>Useable Email</label>
    <type>Email</type>
</CustomField>