force-app/main/default/objects/Associated_Contact__c/fields/X1st_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>X1st_Call_Time__c</fullName>
    <formula>IF(
ISBLANK(Implementation__r.Introductory_Call_Date_Time__c),
&quot;&quot;,
CASE(
MONTH(DATEVALUE(Implementation__r.Introductory_Call_Date_Time__c)),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
&quot;December&quot;
) &amp; &quot; &quot; &amp;
TEXT(DAY(DATEVALUE(Implementation__r.Introductory_Call_Date_Time__c))) &amp;
&quot;, &quot; &amp;
TEXT(YEAR(DATEVALUE(Implementation__r.Introductory_Call_Date_Time__c))) &amp; &quot; &quot; &amp;

IF(
OR(
AND(
Implementation__r.Introductory_Call_Date_Time__c &gt;= DATETIMEVALUE($Setup.Daylight_Savings__c.DST_Start__c),
Implementation__r.Introductory_Call_Date_Time__c &lt; DATETIMEVALUE($Setup.Daylight_Savings__c.DST_End__c)
)
),

TEXT(IF(VALUE(MID(TEXT(Implementation__r.Introductory_Call_Date_Time__c - 7/24), 12, 2)) = 0, 12, VALUE(MID(TEXT(Implementation__r.Introductory_Call_Date_Time__c - 7/24), 12, 2))) - IF(VALUE(MID(TEXT(Implementation__r.Introductory_Call_Date_Time__c - 7/24), 12, 2)) &lt;= 12, 0, 12)) &amp;
&quot;:&quot; &amp;
MID(TEXT(Implementation__r.Introductory_Call_Date_Time__c), 15, 2) &amp;
IF(VALUE(MID(TEXT(Implementation__r.Introductory_Call_Date_Time__c - 7/24), 12, 2)) &lt; 12, &quot;AM&quot;, &quot;PM&quot;) &amp;
&quot;, PDT&quot;,
TEXT(IF(VALUE(MID(TEXT(Implementation__r.Introductory_Call_Date_Time__c - 8/24), 12, 2)) = 0, 12, VALUE(MID(TEXT(Implementation__r.Introductory_Call_Date_Time__c - 8/24), 12, 2))) - IF(VALUE(MID(TEXT(Implementation__r.Introductory_Call_Date_Time__c - 8/24), 12, 2)) &lt;= 12, 0, 12)) &amp;
&quot;:&quot; &amp;
MID(TEXT(Implementation__r.Introductory_Call_Date_Time__c), 15, 2) &amp;
IF(VALUE(MID(TEXT(Implementation__r.Introductory_Call_Date_Time__c - 8/24), 12, 2)) &lt; 12, &quot;AM&quot;, &quot;PM&quot;) &amp;
&quot;, PST&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1st Call Time</label>
    <type>Text</type>
</CustomField>