force-app/main/default/objects/Associated_Contact__c/fields/X1st_Payroll_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Payroll_Date__c</fullName>
    <formula>Implementation__r.X1st_Payroll_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1st Payroll Date</label>
    <type>Date</type>
</CustomField>