force-app/main/default/objects/Associated_Contact__c/fields/X1st_Plan_Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Plan_Sold_Date__c</fullName>
    <formula>Contact__r.X1st_Plan_Sold_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1st Plan Sold Date</label>
    <type>Date</type>
</CustomField>