force-app/main/default/objects/Associated_Contact__c/validationRules/Related_Objects_Requred.validationRule-meta.xml
<ValidationRule>
    <fullName>Related_Objects_Requred</fullName>
    <active>false</active>
    <errorConditionFormula>((NOT(ISBLANK( Implementation__c )) &amp;&amp;
ISBLANK( Opportunity__c )) ||
(NOT(ISBLANK( Implementation__c )) &amp;&amp;
ISBLANK( Plan__c ))) &amp;&amp;
ISNEW()</errorConditionFormula>
    <errorMessage>Please include all available lifecycle objects (Opportunity, Implementation, Plan) before saving this Associated Contact.</errorMessage>
</ValidationRule>