force-app/main/default/objects/Associated_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Contact_Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>