force-app/main/default/objects/Associated_Contact__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Contact_Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Temp_List__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Implementation_Status__c</field>
        <operation>contains</operation>
        <value>In Progress</value>
    </filters>
    <filters>
        <field>Implementation_Owner_Full_Name__c</field>
        <operation>contains</operation>
        <value>Payroll</value>
    </filters>
    <filters>
        <field>X1st_Payroll_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>PK Advisor Mailing, 1/13/22</label>
    <sharedTo>
        <group>Payroll_Koncierge</group>
    </sharedTo>
</ListView>